--- a/src/components/common/Input/Input.module.scss
+++ b/src/components/common/Input/Input.module.scss
@@ -1,7 +1,7 @@
 @import "src/styles/vars";
 .input {
   border-radius: 8px;
-  background-color: $color-gray;
+  background-color: #E2E7EE;
   padding: 14px 24px;
   width: 100%;
   font-family: "TT Firs Neue";
