--- a/src/components/Admin/Access/AccessHead/AccessHead.module.scss
+++ b/src/components/Admin/Access/AccessHead/AccessHead.module.scss
@@ -15,10 +15,23 @@
   font-size: 18px;
   line-height: 120%;
   margin-bottom: 40px;
+  margin-top: 28px;
   &:hover {
     background-color: $color-gray-hover;
   }
 }
-.btnText{
-    padding-left: 10px;
+.btnText {
+  padding-left: 10px;
+}
+.header {
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 41px;
+  letter-spacing: 0.01em;
+
+  /* Дефолтные, фоновые/Чёрный/Чёрный */
+
+  color: $color-black
 }
