--- a/src/components/Admin/Access/UserCard/UserCard.module.scss
+++ b/src/components/Admin/Access/UserCard/UserCard.module.scss
@@ -49,6 +49,7 @@
   margin-top: 10px;
   margin-right: 16px;
   justify-content: center;
+  cursor: pointer;
   &:hover {
     background-color: #fff2f4;
     border-radius: 27px;
