--- a/src/components/common/Button/MyButton.module.scss
+++ b/src/components/common/Button/MyButton.module.scss
@@ -16,6 +16,10 @@
   &:hover {
     background-color: $color-red-hover;
   }
+  &:disabled{
+    background: #D5DDE9;
+    
+  }
 }
 .whiteButton {
   border: 3px solid $color-red;
