--- a/src/components/common/Input/Input.module.scss
+++ b/src/components/common/Input/Input.module.scss
@@ -1,7 +1,7 @@
 @import "src/styles/vars";
 .input {
   border-radius: 8px;
-  background-color: #E2E7EE;
+  background-color: #e2e7ee;
   padding: 14px 24px;
   width: 100%;
   font-family: "TT Firs Neue";
@@ -12,7 +12,10 @@
   letter-spacing: 0.01em;
   margin-top: 16px;
   padding-right: 40px;
+
+  &.isError {
+    border: 1px solid #f73619;
+  }
 }
-.body{
-    
+.body {
 }
