--- a/src/pages/AccessPage/AccessPage.module.scss
+++ b/src/pages/AccessPage/AccessPage.module.scss
@@ -11,11 +11,22 @@
   letter-spacing: 0.02em;
   padding-top: 28px;
 }
-.dataArray{
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    width: 1000px;
+.dataArray {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 1000px;
+}
+.emptyArray {
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 120%;
+  color: $color-black-nonactive;
+  padding-top: 30px;
+  padding-bottom: 140px;
 
+  letter-spacing: 0.01em;
 }
