--- a/src/components/Admin/Header/Header.module.scss
+++ b/src/components/Admin/Header/Header.module.scss
@@ -5,7 +5,7 @@
   background-color: $color-white;
   align-items: center;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 .button {
   display: flex;
