--- a/src/components/Admin/Header/Search/SearchResult/SearchResult.module.scss
+++ b/src/components/Admin/Header/Search/SearchResult/SearchResult.module.scss
@@ -1,1 +1,39 @@
 @import "src/styles/vars";
+.body {
+  background-color: $color-white;
+  height: 100vh;
+  padding: 0 40px;
+}
+.divider {
+  margin-top: 28px;
+  width: 100%;
+  height: 2px;
+  background-color: #9da1ae;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.subHead {
+  padding-top: 28px;
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 120%;
+  color: $color-black;
+  letter-spacing: 0.01em;
+}
+.subHeadText {
+  width: 635px;
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+  color: $color-black-nonactive;
+  letter-spacing: 0.01em;
+  margin-top: 8px;
+  display: flex;
+  justify-content: space-between;
+}
