--- a/src/pages/AdminPage/AdminPage.module.scss
+++ b/src/pages/AdminPage/AdminPage.module.scss
@@ -1,10 +1,24 @@
 @import "src/styles/vars";
-.body{
-    display: flex;
-    background-color: #D5DDE9;
-    min-height: 100vh;
+.body {
+  display: flex;
+  background-color: #d5dde9;
+  min-height: 100vh;
 }
-.content{
-    width: 100%;
-    margin-left: 240px;
+.content {
+  width: 100%;
+  margin-left: 240px;
+}
+.scrollToTopButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 72px;
+  height: 72px;
+  border-radius: 36px;
+  position: fixed;
+  bottom: 250px;
+  right: 20px;
+  z-index: 999;
+  background: #2f3342;
+  box-shadow: 0px 0px 12px rgba(157, 174, 198, 0.65);
 }
