--- a/src/components/Admin/SideBar/SideBar.module.scss
+++ b/src/components/Admin/SideBar/SideBar.module.scss
@@ -12,9 +12,31 @@
   letter-spacing: 0.01em;
   position: fixed;
 }
-.content{
-    margin: 28px 8px;
+.content {
+  margin: 28px 8px;
+  /*   position: relative; */
 }
-.logo{
+.logo {
   padding-left: 12px;
+}
+.button {
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 120%;
+  text-align: center;
+  color: #ffffff;
+  padding: 17px 11.5px;
+  background: #ff1935;
+
+  border-radius: 8px;
+  margin-top: 40px;
+  margin-left: 12px;
+  &:hover {
+    background: #f06071;
+  }
+}
+.hi{
+  display: none;
 }
