--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,20 @@ input::placeholder {
   letter-spacing: 0.01em;
   color: #9da1ae;
 }
+
+/* скроллбар */
+::-webkit-scrollbar {
+  width: 10px; /* ширина полосы прокрутки */
+}
+
+/* Стилизация ползунка */
+::-webkit-scrollbar-thumb {
+  background: #2f3342;
+  border-radius: 12px;
+  width: 10px;
+}
+
+/* Стилизация ползунка при наведении */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #525971; /* цвет ползунка при наведении */
+}
