--- a/src/components/analytics/FilterPostamat/FilterPostamat.module.scss
+++ b/src/components/analytics/FilterPostamat/FilterPostamat.module.scss
@@ -116,6 +116,11 @@
   margin-top: 48px;
   display: grid;
   grid-template-columns: 375px 375px;
+
+  &.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
 
 .colHeader {
@@ -185,3 +190,45 @@
     color: #2F3342;
   }
 }
+
+.searchOptions {
+  width: 100%;
+  padding: 7px 10px;
+  position: absolute;
+  top: 72px;
+
+  background: #FFFFFF;
+  box-shadow: 0px 0px 12px rgba(157, 174, 198, 0.65);
+  border-radius: 8px;
+}
+
+.searchOption {
+  width: 100%;
+  padding: 10px 16px;
+  border-radius: 8px;
+  font-family: 'TT Firs Neue';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  letter-spacing: 0.01em;
+  color: #2F3342;
+  text-align: start;
+
+  &:hover {
+    background: #F4F6F9;
+  }
+}
+
+.clearSearch {
+  position: absolute;
+  right: 20px;
+  top: 7px;
+  border-radius: 50%;
+  padding: 6px;
+
+  &:hover {
+    background: #DEE4ED;
+  }
+}
+
