--- a/src/pages/AnalyticsPage/AnalyticsPage.module.scss
+++ b/src/pages/AnalyticsPage/AnalyticsPage.module.scss
@@ -278,3 +278,80 @@
   }
 }
 
+.appliedSettingsCard {
+  position: relative;
+  background: #FFFFFF;
+  padding: 28px;
+  box-shadow: 0px 0px 12px rgba(157, 174, 198, 0.65);
+  border-radius: 16px;
+  margin-bottom: 40px;
+
+  .header {
+    font-family: 'TT Firs Neue';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 31px;
+    letter-spacing: 0.02em;
+    color: #2F3342;
+
+    .count {
+      color: #9DA1AE
+    }
+  }
+
+  .expandButton {
+    position: absolute;
+    top: 21px;
+    right: 21px;
+    padding: 15px 10px;
+    border-radius: 50%;
+    transition: all ease-out 0.2s;
+
+    &:hover {
+      background: #DEE4ED;
+    }
+  }
+
+  .chips {
+    margin-top: 24px;
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+  }
+
+  .chip {
+    padding: 7px 8px 7px 12px;
+    height: 36px;
+    background: #FFFFFF;
+    border: 1px solid #2F3342;
+    border-radius: 4px;
+    font-family: 'TT Firs Neue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22px;
+    letter-spacing: 0.01em;
+    color: #2F3342;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+
+    .clearButton {
+      width: 28px;
+      height: 28px;
+      padding: 2px;
+      border-radius: 50%;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+
+      &:hover {
+        background: #DEE4ED;
+      }
+    }
+  }
+}
