--- a/src/pages/AnalyticsPage/AnalyticsPage.module.scss
+++ b/src/pages/AnalyticsPage/AnalyticsPage.module.scss
@@ -13,6 +13,8 @@
   line-height: 41px;
   letter-spacing: 0.01em;
   color: #2F3342;
+  user-select: none;
+  cursor: pointer;
 }
 
 .button {
@@ -285,6 +287,13 @@
   box-shadow: 0px 0px 12px rgba(157, 174, 198, 0.65);
   border-radius: 16px;
   margin-bottom: 40px;
+  animation: enter ease-out 0.25s;
+  transform-origin: top;
+
+  @keyframes enter {
+    from {transform: scaleY(0)}
+    to {transform: scaleY(1)}
+  }
 
   .header {
     font-family: 'TT Firs Neue';
