--- a/src/components/Admin/Header/Search/SearchResult/SearchTaskCard/TaskCard.module.scss
+++ b/src/components/Admin/Header/Search/SearchResult/SearchTaskCard/TaskCard.module.scss
@@ -84,3 +84,13 @@
   color: $color-white;
   border-radius: 4px;
 }
+.date {
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 19px;
+  text-align: right;
+  letter-spacing: 0.01em;
+  color: #9da1ae;
+}
