--- a/src/components/Admin/Header/Search/Search.module.scss
+++ b/src/components/Admin/Header/Search/Search.module.scss
@@ -1,16 +1,35 @@
 @import "src/styles/vars";
 .input {
-    border-radius: 8px;
-    background-color: #e2e7ee;
-    padding: 14px 24px;
-    width: 636px;
-    font-family: "TT Firs Neue";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 22px;
-    letter-spacing: 0.01em;
-    margin-left: 40px;
-    /* margin-top: 16px; */
-    padding-right: 40px;
+  border-radius: 8px;
+  background-color: #e2e7ee;
+  padding: 14px 24px;
+  width: 636px;
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 0.01em;
+  margin-left: 40px;
+  /* margin-top: 16px; */
+  padding-right: 40px;
+}
+.button {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  border: none;
+  cursor: pointer;
+  background: #ff1935;
+  width: 73px;
+  height: 48px;
+  border-radius: 0px 8px 8px 8px;
+  &:hover{
+    background: #F06071;
+    cursor: pointer;
   }
+}
