--- a/src/components/Admin/Header/Search/SearchResult/SearchResult.module.scss
+++ b/src/components/Admin/Header/Search/SearchResult/SearchResult.module.scss
@@ -9,10 +9,12 @@
   width: 100%;
   height: 2px;
   background-color: #9da1ae;
+  opacity: 0.3;
 }
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .subHead {
   padding-top: 28px;
@@ -37,10 +39,31 @@
   display: flex;
   justify-content: space-between;
 }
-.cardBlock{
-    padding-top: 24px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 16px;
+.cardBlock {
+  padding-top: 24px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.button {
+  width: 54px;
+  height: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover {
+    background: #dee4ed;
+    border-radius: 27px;
+  }
+}
+.wrongSearch {
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: 0.01em;
+  color: #9da1ae;
+  padding-top: 28px;
 }
