--- a/src/pages/ReviewListPage/ReviewListPage.module.scss
+++ b/src/pages/ReviewListPage/ReviewListPage.module.scss
@@ -258,10 +258,11 @@
       font-weight: 500;
       font-size: 15px;
       line-height: 19px;
-      text-align: right;
+      text-align: center;
       letter-spacing: 0.01em;
       color: #FFFFFF;
-      width: 90px;
+      width: 100px;
+      white-space: nowrap;
     }
 
     .date {
