--- a/src/pages/TaskListPage/TaskListPage.module.scss
+++ b/src/pages/TaskListPage/TaskListPage.module.scss
@@ -189,47 +189,33 @@
 
   &:hover {
     background: #EAEEF4;
+
+    .rating {
+      border-right: solid #DBDFE6 2px;
+    }
   }
 
   .rating {
-    width: 50px;
-    height: 100%;
-    border-radius: 8px 0px 8px 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'TT Firs Neue';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 120%;
-    color: #FFFFFF;
+    padding: 12px 22px 12px 24px;
+    border-right: solid #EBECEF 2px;
   }
 
   .info {
-    margin-left: 16px;
+    margin-left: 24px;
     display: flex;
     flex-direction: column;
+    align-items: start;
     gap: 10px;
-  }
-
-  .categories {
-    display: flex;
-    gap: 8px;
   }
 
   .category {
     font-family: 'TT Firs Neue';
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
     letter-spacing: 0.01em;
-    text-transform: lowercase;
     color: #2F3342;
-    padding: 4px 8px;
-    border: 1px solid #2F3342;
-    border-radius: 4px;
   }
 
   .address {
@@ -258,10 +244,11 @@
       font-weight: 500;
       font-size: 15px;
       line-height: 19px;
-      text-align: right;
+      text-align: center;
       letter-spacing: 0.01em;
       color: #FFFFFF;
-      width: 90px;
+      width: 100px;
+      white-space: nowrap;
     }
 
     .date {
@@ -289,8 +276,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 10px;
     padding: 17px 38px;
-    background: #FFFFFF;
     border-radius: 8px;
     font-family: 'TT Firs Neue';
     font-style: normal;
@@ -298,55 +285,62 @@
     font-size: 18px;
     line-height: 120%;
     text-align: center;
-    opacity: 0.5;
+    //opacity: 0.5;
+    border: 3px solid #2F3342;
+    color: #2F3342;
 
     &:hover {
-      opacity: 0.7;
+      background: #EAEEF4;
     }
 
     &.active {
-      opacity: 1;
-
-      &:hover {
-        opacity: 1;
+      border: none;
+      color: #FFFFFF;
+      img {
+        filter: brightness(10);
       }
     }
   }
 
-  .tabAll {
-    color: #2F3342;
-    box-shadow: 0px 0px 12px rgba(157, 174, 198, 0.65);
-    border: none;
-    width: 111px;
-
+  .tabGreen {
     &.active {
-      border: 3px solid #2F3342;
+      background: #00B333;
+      &:hover {
+        background: #00B333;
+      }
     }
   }
 
-  .tabGreen {
-    color: #FFFFFF;
-    background: #00B333;
-    box-shadow: 0px 0px 8px #9FF3CF;
-  }
-
   .tabYellow {
-    color: #FFFFFF;
-    background: #F0BC00;
-    box-shadow: 0px 0px 8px #F3F09F;
+    &.active {
+      background: #F0BC00;
+      &:hover {
+        background: #F0BC00;
+      }
+    }
   }
 
   .tabRed {
-    color: #FFFFFF;
-    background: #FF1935;
-    box-shadow: 0px 0px 8px #F7C1C1;
+    &.active {
+      background: #FF1935;
+      &:hover {
+        background: #FF1935;
+      }
+    }
   }
 }
 
-.exportToXls {
+.sort {
   margin-left: auto;
 }
 
-.sort {
-
+.noResults {
+  margin-top: 20px;
+  font-family: 'TT Firs Neue';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: 0.01em;
+  color: #9DA1AE;
 }
