--- a/src/components/Admin/Access/AddUser/AddUser.module.scss
+++ b/src/components/Admin/Access/AddUser/AddUser.module.scss
@@ -31,6 +31,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(47, 51, 66, 0.7);
+    z-index: 1;
   }
   .content {
     width: 610px;
