--- a/src/components/Admin/Header/Search/SearchResult/CommentCard/CommentCard.module.scss
+++ b/src/components/Admin/Header/Search/SearchResult/CommentCard/CommentCard.module.scss
@@ -75,6 +75,9 @@
   justify-content: flex-end;
 }
 .id {
+  width: 100px;
+  display: flex;
+  justify-content: center;
   font-family: "TT Firs Neue";
   font-style: normal;
   font-weight: 500;
@@ -82,12 +85,15 @@
   line-height: 19px;
   text-align: right;
   letter-spacing: 0.01em;
-  padding: 10px;
+  padding: 10px 0;
   background: $color-black;
   color: $color-white;
   border-radius: 4px;
 }
 .date {
+  display: flex;
+  justify-content: center;
+  width: 50px;
   font-family: "TT Firs Neue";
   font-style: normal;
   font-weight: 400;
