--- a/src/components/common/Divider/Divider.module.scss
+++ b/src/components/common/Divider/Divider.module.scss
@@ -1,9 +1,8 @@
 @import "src/styles/vars";
 .divider{
-    /* margin: 0 40px; */
     width: 100%;
-    height: 0;
-    opacity: 0.5;
-    border-bottom: 2px solid $color-black-nonactive;
     max-width: 960px;
+    height: 0px;
+    border: 2px solid #9DA1AE;
+    opacity: 0.3;
 }
