--- a/src/pages/TaskPage/TaskPage.module.scss
+++ b/src/pages/TaskPage/TaskPage.module.scss
@@ -331,7 +331,7 @@
   line-height: 22px;
   letter-spacing: 0.01em;
   color: #2f3342;
-  margin-top: 106px;
+  margin-top: 28px;
 }
 
 .task {
@@ -343,7 +343,57 @@
   padding: 10px;
   margin-top: 16px;
   color: #FFFFFF;
+
+  cursor: pointer;
+  &:hover {
+    opacity: 0.8;
+  }
 }
 .rightSide{
     margin-bottom: 40px;
+}
+
+.taskInfo {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  padding: 28px;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 12px rgba(157, 174, 198, 0.65);
+  border-radius: 16px;
+
+  .sourceContainer:first-child {
+    margin-top: 0;
+  }
+
+  .bottom {
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .button {
+    width: 158px;
+    height: 56px;
+    left: 28px;
+    top: 160px;
+    border-radius: 8px;
+    font-family: 'TT Firs Neue';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 120%;
+    text-align: center;
+
+    &.yellow {
+      color: #2F3342;
+      background: #F0BC00;
+      border: 2px solid #F0BC00;
+      box-shadow: 0px 0px 8px #F3F09F;
+    }
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
 }
