--- a/src/components/Admin/Header/Search/SearchResult/SearchResult.module.scss
+++ b/src/components/Admin/Header/Search/SearchResult/SearchResult.module.scss
@@ -4,6 +4,7 @@
   min-height: 100vh;
   padding: 0 40px;
   padding-bottom: 40px;
+  /* width: 980px; */
 }
 .divider {
   margin-top: 28px;
@@ -14,8 +15,17 @@
 }
 .header {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
+}
+.head {
+  font-family: "TT Firs Neue";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 41px;
+  letter-spacing: 0.01em;
+  color: #2f3342;
 }
 .subHead {
   padding-top: 28px;
@@ -39,8 +49,8 @@
   margin-top: 8px;
   display: flex;
   justify-content: space-between;
-  &:hover{
-    color: #2F3342;
+  &:hover {
+    color: #2f3342;
   }
 }
 .cardBlock {
@@ -51,6 +61,7 @@
   gap: 16px;
 }
 .button {
+  margin-left: 285px;
   width: 54px;
   height: 54px;
   display: flex;
@@ -72,5 +83,5 @@
   padding-top: 28px;
 }
 .arrowActive * {
-  fill: #F73619;
+  fill: #f73619;
 }
