--- a/src/pages/ReviewPage/ReviewPage.module.scss
+++ b/src/pages/ReviewPage/ReviewPage.module.scss
@@ -331,7 +331,7 @@
   line-height: 22px;
   letter-spacing: 0.01em;
   color: #2f3342;
-  margin-top: 106px;
+  margin-top: 28px;
 }
 
 .task {
@@ -343,6 +343,11 @@
   padding: 10px;
   margin-top: 16px;
   color: #FFFFFF;
+
+  cursor: pointer;
+  &:hover {
+    opacity: 0.8;
+  }
 }
 .rightSide{
     margin-bottom: 40px;
