--- a/src/components/Admin/LeftMenu/sideBarScreen/SuccesfullDataLoad/succesfullDataLoad.module.scss
+++ b/src/components/Admin/LeftMenu/sideBarScreen/SuccesfullDataLoad/succesfullDataLoad.module.scss
@@ -12,8 +12,10 @@
   z-index: 10000;
 }
 .content {
+  z-index: 10000;
   width: 610px;
-
+  display: flex;
+  justify-content: space-between;
   background-color: $color-white;
   border-radius: 16px;
   opacity: 1;
@@ -42,4 +44,16 @@
   letter-spacing: 0.01em;
   color: #9da1ae;
   margin-top: 30px;
+}
+.button{
+  margin-top: -12px;
+  width: 54px;
+  height: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover{
+    background: #DEE4ED;
+    border-radius: 27px;
+  }
 }
